--- a/my_hive/my_hive.vcxproj
+++ b/my_hive/my_hive.vcxproj
@@ -131,6 +131,9 @@
   <ItemGroup>
     <ClInclude Include="hive.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\hive.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
