--- a/my_hive/my_hive.vcxproj.filters
+++ b/my_hive/my_hive.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="hive.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="int_hive.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hive.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="int_hive.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
